# BinFix

./: .gitignore  Makefile
binfault/: CMakeLists.txt
binfault/build_unit_test/: gmp_run_test_suite.pl
binfault/samples/: zero.c
binfault/source/: aggregate_bb  binfault.cpp
bininject/: CMakeLists.txt  Makefile  bininject.rb  helper.rb
bininject/source/: bininject.cpp
binsymbolic/: binsymbolic.rb
bintranslate/: addressing_mode.treetop  addressing_mode_nodes.rb  addressing_mode_parser.rb  bintranslate.rb  code_generator.rb  translate_variables.rb  write_output.rb
bintranslate/c_style_parser/: ast_nodes.rb  binfix_dsl.treetop  c_style_parser.rb
bintranslate/samples/: addressing_mode_parser_tests.rb  c_style_parser_tests.rb  dsl_instructions_list_style  dsl_patch  variables  variables_extracted_by_binextract
binvar/: CMakeLists.txt
binvar/source/: binextract.cpp  binvar.cpp
helper/: build_gmp_unit_test  gmp_run_test_suite.pl
helper/build_genprog_subjects/: build_gmp  build_gmp_unit_test  gmp_run_test_suite.pl
helper/examples/add_constant/: add_constant.c  dsl_patch  oracle  variables
helper/examples/assignment/: assignment.c  dsl_patch  oracle  variables
helper/examples/coreutils-d57ebc45ba4c59cc6f8bb0e9a435ecbddc84b982/: Makefile  bug_report  dsl_patch  oracle  variables
helper/examples/deletion/: Makefile  dsl_patch  oracle
helper/examples/if_condition/: dsl_patch  if_condition.c  oracle  variables
helper/examples/synthesis/: repair
src/repair/: inference.py  main.py  synthesis.py
src/repair/klee-last-0/: temp0.smt2  temp1.smt2
(+1 files in other folders)
